--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 body{
     background-color:whitesmoke;
+    margin:0;
+    padding:0;
 }
 h1,h2,h3 {
+    margin: 10px;
     font-family: monospace;
     border-bottom: solid 1px black;
 }
-p,a{
+p,a,ul,li,footer{
+    margin:10px;
     font-family: monospace;
     font-size:20px;
+}
+footer{
+    margin:0;
+    padding: 10px;
+    position:fixed;
+    bottom:0;
+    background-color:lightgray;
 }
 input{
     font-size:20px;
